Remove main action service.
Signed-off-by: Finn Carroll <carrofin@amazon.com>